2007-06-26  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/inputfield.py (InputField._on_idle): Exit if the
	field control is not shown.

2007-06-25  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/form.py (RecordForm.Record): New `PresentedRow'
	subclass aware of its form.

	* pytis/form/_grid.py: Use `Form.record()' to create new
	`PresentedRow' instances.

	* pytis/form/list.py (ListForm): Duplicated method name fixed.

	* pytis/presentation/spec.py (Specification): Allow `sorting' to
	be also defined by a method.

	* pytis/form/application.py: Use `ExitDialog' on exit and save the
	forms for next startup.  Use saved forms together with `congig.startup_forms'.

	* pytis/form/dialog.py (ExitDialog): New dialog with a choice of
	forms to open at next application startup.

2007-06-22  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py: Window commands moved to the menu of windows.

	* pytis/form/inputfield.py (CheckBoxField._set_value): Accept also
	null values (as an empty string).

	* pytis/form/list.py: Added support for showing/hiding row
	labels and aggregation labels within them.

	* pytis/form/commands_.py: New command `ListForm.TOGGLE_ROW_LABELS'.

2007-06-20  Pavel Hanak  <hanak@alfik.akont.xx>

	* pytis/form/inputfield.py (GenericCodebookField._run_codebook_form): 
	By invoking CodebookForm take into account `validity_condition'.
	
	* pytis/data/types_.py (DataEnumerator.validity_condition): See above.

2007-06-20  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/screen.py: Don't use menu icons for 'CheckItem'.

	* pytis/form/form.py: Added aggregation toolbar button.

	* pytis/form/list.py: Aggregation result display in table
	implemented.

	* pytis/form/commands_.py: New commands
	ListForm.TOGGLE_AGGREGATION, ListForm.AGGREGATE and
	ListForm.UNAGGREGATE.  Defined their icons.

2007-06-19  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/form.py: Remember the top level sizer as an
	attribute.

	* pytis/form/list.py: Minor cleanup.
